Mise a jour évaluation

--- a/Exerciseur/Evaluation.html
+++ b/Exerciseur/Evaluation.html
@@ -406,13 +406,22 @@
         <i><p id="Resume_Question">
 
         </p></i>
-        <u><p> Ta réponse :</p></u>
-        <p id="Resume_Reponse">
+        <div style="border: solid; border-width: 1; border-color: white; padding: 0px 20px; border-radius: 20px;">
+            <u><p> Ta réponse :</p></u>
+            <p id="Resume_Reponse">
 
-        </p>
-        <i><p id="Resume_Aide">
+            </p>
+        </div>
+        <br><br><br><br><br>
+        <div style="background-color: #FFFF55; border-radius: 5px 20px; padding: 0px 20px; fill: #FFFF55;">
+            <p  style="color: black;">
+                Aide :
+            </p>
+            <i><p id="Resume_Aide" style="color: black;">
 
-        </p></i>
+            </p></i>
+        </div>
+        
     </div>
     
     <div id="EndResume">
@@ -489,7 +498,7 @@
         </div>
 
         <p style="font-size: 10pt;">
-          <i> Attent que ton code soit générer puis appuie sur le bouton ci-dessous pour copier le résultat de ton évaluation et envoie le à ton professeur via pronote ou l'ENT.</i>  
+          <i> Attend que ton code soit générer puis appuie sur le bouton ci-dessous pour copier le résultat de ton évaluation et envoie le à ton professeur via pronote ou l'ENT.</i>  
         </p>
 
         <input class="backbutton" type="button" value="Telecharger" onclick="SaveFinal()">
