--- a/Exerciseur/Evaluation.html
+++ b/Exerciseur/Evaluation.html
@@ -415,7 +415,7 @@
         <br><br><br><br><br>
         <div style="background-color: #FFFF55; border-radius: 5px 20px; padding: 0px 20px; fill: #FFFF55;">
             <p  style="color: black;">
-                Aide :
+                Conseil :
             </p>
             <i><p id="Resume_Aide" style="color: black;">
 
