--- a/Exerciseur/Evaluation.html
+++ b/Exerciseur/Evaluation.html
@@ -386,9 +386,9 @@
     <b><u style="color: white;"><h1 id="Titre">
         
     </h1></b></u>
-    <b><u style="color: white;"><h2 id="ExerciceNumber">
+    <b><u style="color: white;"><h2 id="ExerciceNumber" class="soustitre">
     </h2></b></u>
-    <p id="Consigne">
+    <p class="soustitre" id="Consigne">
         Consigne : 
     </p>
     <div id="Content">
