--- a/Exerciseur/Exercice.html
+++ b/Exerciseur/Exercice.html
@@ -137,7 +137,7 @@
     <b><u style="color: white;"><h1 id="Titre">
         
     </h1></b></u>
-    <p id="Consigne">
+    <p class="soustitre" id="Consigne">
         Consigne : 
     </p>
     <div id="Content">
