--- a/Exerciseur/3e/Arithmétique.html
+++ b/Exerciseur/3e/Arithmétique.html
@@ -24,11 +24,11 @@
             Arithmétique
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Arithmétique/Décomposer un nombre en produits de facteurs premiers')">Décomposer un nombre en produits de facteurs premiers</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Arithmétique/Déterminer si un nombre est premier')">Déterminer si un nombre est premier</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Arithmétique/Simplifier une fraction pour la rendre irréductible')">Simplifier une fraction pour la rendre irréductible</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Arithmétique/Résoudre des problèmes relevant de la divisibilité')">Résoudre des problèmes relevant de la divisibilité</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Arithmétique/Utiliser les égalités de fractions')">Utiliser les égalités de fractions</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Arithmétique/Décomposer un nombre en produits de facteurs premiers')" value="Décomposer un nombre en produits de facteurs premiers"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Arithmétique/Déterminer si un nombre est premier')" value="Déterminer si un nombre est premier"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Arithmétique/Simplifier une fraction pour la rendre irréductible')" value="Simplifier une fraction pour la rendre irréductible"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Arithmétique/Résoudre des problèmes relevant de la divisibilité')" value="Résoudre des problèmes relevant de la divisibilité"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Arithmétique/Utiliser les égalités de fractions')" value="Utiliser les égalités de fractions"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
