--- a/Exerciseur/3e/Calcul littéral.html
+++ b/Exerciseur/3e/Calcul littéral.html
@@ -24,10 +24,10 @@
             Calcul littéral
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Calcul littéral/Calculer la valeur d\'une expression littérale')">Calculer la valeur d'une expression littérale</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Calcul littéral/Développer une expression littérale')">Développer une expression littérale</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Calcul littéral/Factoriser une expression littérale')">Factoriser une expression littérale</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Calcul littéral/Réduire une expression littérale')">Réduire une expression littérale</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Calcul littéral/Calculer la valeur d\'une expression littérale')" value="Calculer la valeur d'une expression littérale"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Calcul littéral/Développer une expression littérale')" value="Développer une expression littérale"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Calcul littéral/Factoriser une expression littérale')" value="Factoriser une expression littérale"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Calcul littéral/Réduire une expression littérale')" value="Réduire une expression littérale"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
