--- a/Exerciseur/3e/Equations.html
+++ b/Exerciseur/3e/Equations.html
@@ -24,10 +24,10 @@
             Equations
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button"  onclick="HtmlManipulator.SetupExercice('3e/Equations/Résoudre une équation simple (de type ax=b)')">Résoudre une équation simple (de type ax=b)</a></li>
-            <li><a class="button"  onclick="HtmlManipulator.SetupExercice('3e/Equations/Résoudre une équation (de type ax+b=c)')">Equations/Résoudre une équation (de type ax+b=c)</a></li>
-            <li><a class="button"  onclick="HtmlManipulator.SetupExercice('3e/Equations/Résoudre une équation (de type ax+b=cx+d)')">Equations/Résoudre une équation (de type ax+b=cx+d)</a></li>
-            <li><a class="button"  onclick="HtmlManipulator.SetupExercice('3e/Equations/Résoudre une équation produit')">Résoudre une équation produit</a></li>
+            <li><input class="button" type="button"  onclick="HtmlManipulator.SetupExercice('3e/Equations/Résoudre une équation simple (de type ax=b)')" value="Résoudre une équation simple (de type ax=b)"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Equations/Résoudre une équation (de type ax+b=c)')" value="Equations/Résoudre une équation (de type ax+b=c)"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Equations/Résoudre une équation (de type ax+b=cx+d)')" value="Equations/Résoudre une équation (de type ax+b=cx+d)"></li>
+            <li><input class="button" type="button"  onclick="HtmlManipulator.SetupExercice('3e/Equations/Résoudre une équation produit')" value="Résoudre une équation produit"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
