--- a/Exerciseur/3e/Notion de fonction.html
+++ b/Exerciseur/3e/Notion de fonction.html
@@ -24,8 +24,8 @@
             Notion de fonction
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Notion de fonction/Déterminer l\'image d\'un nombre')">Déterminer l'image d'un nombre</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Notion de fonction/Déterminer l\'antécédent d\'un nombre')">Déterminer l'antécédent d'un nombre</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Notion de fonction/Déterminer l\'image d\'un nombre')" value="Déterminer l'image d'un nombre"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Notion de fonction/Déterminer l\'antécédent d\'un nombre')" value="Déterminer l'antécédent d'un nombre"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
