--- a/Exerciseur/3e/Statistiques.html
+++ b/Exerciseur/3e/Statistiques.html
@@ -24,10 +24,10 @@
             Statistiques
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Statistiques/Calculer une Moyenne')">Calculer une Moyenne</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Statistiques/Calculer une Moyenne Pondérée')">Calculer une Moyenne Pondérée</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Statistiques/Calculer une Médiane')">Calculer une Médiane</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Statistiques/Calculer une Etendue')">Calculer une Etendue</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Statistiques/Calculer une Moyenne')" value="Calculer une Moyenne"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Statistiques/Calculer une Moyenne Pondérée')" value="Calculer une Moyenne Pondérée"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Statistiques/Calculer une Médiane')" value="Calculer une Médiane"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Statistiques/Calculer une Etendue')" value="Calculer une Etendue"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
