--- a/Exerciseur/3e/Théorème de Thalès.html
+++ b/Exerciseur/3e/Théorème de Thalès.html
@@ -24,8 +24,8 @@
             Théorème de Thalès
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Théorème de Thalès/Utiliser le théorème de Thalès')">Utiliser le théorème de Thalès</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Théorème de Thalès/Utiliser la réciproque du théorème de Thalès')">Utiliser la réciproque du théorème de Thalès</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Théorème de Thalès/Utiliser le théorème de Thalès')" value="Utiliser le théorème de Thalès"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Théorème de Thalès/Utiliser la réciproque du théorème de Thalès')" value="Utiliser la réciproque du théorème de Thalès"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
