--- a/Exerciseur/3e/Transformations du plan.html
+++ b/Exerciseur/3e/Transformations du plan.html
@@ -24,11 +24,11 @@
             Tranformations du plan
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Transformations du plan/Identifier les tranformations du plan')">Identifier les tranformations du plan</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Transformations du plan/Comprendre les symétries')">Comprendre les symétries</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Transformations du plan/Comprendre les translations')">Comprendre les translations</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Transformations du plan/Comprendre les rotations')">Comprendre les rotations</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('3e/Transformations du plan/Comprendre les homothéties')">Comprendre les homothéties</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Transformations du plan/Identifier les tranformations du plan')" value="Identifier les tranformations du plan"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Transformations du plan/Comprendre les symétries')" value="Comprendre les symétries"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Transformations du plan/Comprendre les translations')" value="Comprendre les translations"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Transformations du plan/Comprendre les rotations')" value="Comprendre les rotations"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Transformations du plan/Comprendre les homothéties')" value="Comprendre les homothéties"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
