--- a/Exerciseur/4e/Fractions.html
+++ b/Exerciseur/4e/Fractions.html
@@ -24,9 +24,9 @@
             Fractions
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('4e/Fractions/Simplifier une  fraction')">Simplifier une  fraction</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('4e/Fractions/Additionner et soustraire des fractions')">Additionner et soustraire des fractions</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('4e/Fractions/Multiplier et diviser des fractions')">Multiplier et diviser des fractions</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Fractions/Simplifier une  fraction')" value="Simplifier une  fraction"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Fractions/Additionner et soustraire des fractions')" value="Additionner et soustraire des fractions"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Fractions/Multiplier et diviser des fractions')" value="Multiplier et diviser des fractions"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
