--- a/Exerciseur/4e/Nombres relatifs.html
+++ b/Exerciseur/4e/Nombres relatifs.html
@@ -24,8 +24,8 @@
             Nombres relatifs
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('4e/Nombres relatifs/Additionner et soustraire des nombres relatifs')">Additionner et soustraire des nombres relatifs</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('4e/Nombres relatifs/Multiplier et diviser des nombres relatifs')">Multiplier et diviser des nombres relatifs</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Nombres relatifs/Additionner et soustraire des nombres relatifs')" value="Additionner et soustraire des nombres relatifs"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Nombres relatifs/Multiplier et diviser des nombres relatifs')" value="Multiplier et diviser des nombres relatifs"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
