--- a/Exerciseur/4e/Proportionnalité.html
+++ b/Exerciseur/4e/Proportionnalité.html
@@ -24,8 +24,8 @@
             Proportionnalité
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('4e/Proportionnalité/Calculer une quatrième proportionnelle')">Calculer une quatrième proportionnelle</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('4e/Proportionnalité/Identifier une situation de proportionnalité')">Identifier une situation de proportionnalité</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Proportionnalité/Calculer une quatrième proportionnelle')" value="Calculer une quatrième proportionnelle"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Proportionnalité/Identifier une situation de proportionnalité')" value="Identifier une situation de proportionnalité"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
