--- a/Exerciseur/4e/Théorème de Pythagore.html
+++ b/Exerciseur/4e/Théorème de Pythagore.html
@@ -24,8 +24,8 @@
             Théorème de Pythagore
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('4e/Théorème de Pythagore/Utiliser le théorème de Pythagore')">Utiliser le théorème de Pythagore</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('4e/Théorème de Pythagore/Utiliser la réciproque du théorème de Pythagore')">Utiliser la réciproque du théorème de Pythagore</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Théorème de Pythagore/Utiliser le théorème de Pythagore')" value="Utiliser le théorème de Pythagore"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Théorème de Pythagore/Utiliser la réciproque du théorème de Pythagore')" value="Utiliser la réciproque du théorème de Pythagore"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
