--- a/Exerciseur/5e/Nombres relatifs.html
+++ b/Exerciseur/5e/Nombres relatifs.html
@@ -19,10 +19,10 @@
             Nombres relatifs
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('5e/Nombres relatifs/Comparaison de relatifs')">Comparaison de relatifs</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('5e/Nombres relatifs/Somme de nombres relatifs')">Somme de nombres relatifs</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('5e/Nombres relatifs/Différence de nombres relatifs')">Différence de nombres relatifs</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('5e/Nombres relatifs/Calcul en ligne')">Calcul en ligne</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('5e/Nombres relatifs/Comparaison de relatifs')" value="Comparaison de relatifs"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('5e/Nombres relatifs/Somme de nombres relatifs')" value="Somme de nombres relatifs"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('5e/Nombres relatifs/Différence de nombres relatifs')" value="Différence de nombres relatifs"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('5e/Nombres relatifs/Calcul en ligne')" value="Calcul en ligne"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
