--- a/Exerciseur/6e/Nombres décimaux.html
+++ b/Exerciseur/6e/Nombres décimaux.html
@@ -24,10 +24,10 @@
             Nombres décimaux
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('6e/Nombres décimaux/Fractions décimales')">Fractions décimales</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('6e/Nombres décimaux/Décomposition d\'un nombre décimal')">Décomposition d'un nombre décimal</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('6e/Nombres décimaux/Rang des chiffres dans un nombre')">Rang des chiffres dans un nombre</a></li>
-            <li><a class="button" onclick="HtmlManipulator.SetupExercice('6e/Nombres décimaux/Comparer des nombres décimaux')">Comparer des nombres décimaux</a></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('6e/Nombres décimaux/Fractions décimales')" value="Fractions décimales"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('6e/Nombres décimaux/Décomposition d\'un nombre décimal')" value="Décomposition d'un nombre décimal"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('6e/Nombres décimaux/Rang des chiffres dans un nombre')" value="Rang des chiffres dans un nombre"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('6e/Nombres décimaux/Comparer des nombres décimaux')" value="Comparer des nombres décimaux"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
