--- a/Exerciseur/4e/Pyramide et cône.html
+++ b/Exerciseur/4e/Pyramide et cône.html
@@ -24,7 +24,9 @@
             Pyramide et cône
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Pyramide et cône/Calculer des volumes')" value="Calculer des volumes"></li>
+            <li><input class="button" type="button" 
+                onclick="HtmlManipulator.SetupExercice('4e/Pyramide et cône/Calculer des volumes')" 
+                value="Calculer des volumes"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
