Evaluation de 3ème

--- a/Exerciseur/Evaluation.html
+++ b/Exerciseur/Evaluation.html
@@ -353,14 +353,13 @@
     </script>
 
     <style>
-        td, tr, table{
+        .Endtable{
+            width: 100%;
             border: none;
         }
-        table{
-            width: 100%;
-        }
-        td{
+        .Endtd{
             width: 33%;
+            border: none;
         }
         .cor{
             color: #FF5555;
@@ -436,60 +435,60 @@
                         
             </div>
             <div style="height: 50px;"></div>
-            <table>
+            <table class="Endtable">
                 <tbody >
                     <tr>
-                        <td>
+                        <td class="Endtd">
                             <i><label> Question : </label></i>
                         </td>
-                        <td>
+                        <td class="Endtd">
                             <label> Ta réponse :</label>
                         </td>
-                        <td>
+                        <td class="Endtd">
                             <i><label  class="cor"> Correction : </label></i>
                         </td>
                     </tr>
                     <tr>
-                        <td>
+                        <td class="Endtd">
                             <i><label id="Question 1"> </label></i>
                         </td>
-                        <td>
+                        <td class="Endtd">
                             <label id="Réponse 1"> </label>
                         </td>
-                        <td>
+                        <td class="Endtd">
                             <i><label id="Correction 1" class="cor"> </label></i>
                         </td>
                     </tr>
                     <tr>
-                        <td>
+                        <td class="Endtd">
                             <i><label id="Question 2"> </label></i>
                         </td>
-                        <td>
+                        <td class="Endtd">
                             <label id="Réponse 2"> </label>
                         </td>
-                        <td>
+                        <td class="Endtd">
                             <i><label id="Correction 2" class="cor"> </label></i>
                         </td>
                     </tr>
                     <tr>
-                        <td>
+                        <td class="Endtd">
                             <i><label id="Question 3"> </label></i>
                         </td>
-                        <td>
+                        <td class="Endtd">
                             <label id="Réponse 3"> </label>
                         </td>
-                        <td>
+                        <td class="Endtd">
                             <i><label id="Correction 3" class="cor"> </label></i>
                         </td>
                     </tr>
                     <tr>
-                        <td>
+                        <td class="Endtd">
                             <i><label id="Question 4"> </label></i>
                         </td>
-                        <td>
+                        <td class="Endtd">
                             <label id="Réponse 4"> </label>
                         </td>
-                        <td>
+                        <td class="Endtd">
                             <i><label id="Correction 4" class="cor"> </label></i>
                         </td>
                     </tr>
