--- a/Exerciseur/4e/Théorème de Pythagore/Utiliser le théorème de Pythagore/Content.html
+++ b/Exerciseur/4e/Théorème de Pythagore/Utiliser le théorème de Pythagore/Content.html
@@ -22,7 +22,7 @@
     </p>
     <p>
         <label id="correctionGlobal"></label><br>
-        <div id="Correction">
+        <div id="Correction" style="color:#FF5555">
             <Label>Dans le triangle ABC, rectangle en </Label>
             <Label id="CorPythagore_point"></Label>
             <Label> le côté le plus long est </Label>
