--- a/Exerciseur/Evaluation.html
+++ b/Exerciseur/Evaluation.html
@@ -347,6 +347,7 @@
                 range.moveToElementText(document.getElementById(containerid));
                 range.select();
             } else if (window.getSelection) {
+                console.log("Copy Windows");
                 var range = document.createRange();
                 range.selectNode(document.getElementById(containerid));
                 window.getSelection().addRange(range);
