--- a/Exerciseur/3e/Trigonométrie.html
+++ b/Exerciseur/3e/Trigonométrie.html
@@ -21,7 +21,7 @@
             Niveau 3ème :
         </p>
         <h1><b><u>
-            Arithmétique
+            Trigonométrie
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
             <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Trigonométrie/Calculer la longueur d'un côté')" value="Calculer la longueur d'un côté"></li>
