--- a/Exerciseur/3e/Trigonométrie.html
+++ b/Exerciseur/3e/Trigonométrie.html
@@ -24,8 +24,8 @@
             Trigonométrie
         </h1></b></u>
         <ul>Sélectionner la compétence à travailler
-            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Trigonométrie/Calculer la longueur d'un cote')" value="Calculer la longueur d'un côté"></li>
-            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Trigonométrie/Calculer la mesure d'un angle')" value="Calculer la mesure d'un angle"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Trigonométrie/Calculer la longueur d\'un cote')" value="Calculer la longueur d'un côté"></li>
+            <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('3e/Trigonométrie/Calculer la mesure d\'un angle')" value="Calculer la mesure d'un angle"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
