--- a/Exerciseur/3e/Trigonométrie/Calculer la mesure d'un angle/Content.html
+++ b/Exerciseur/3e/Trigonométrie/Calculer la mesure d'un angle/Content.html
@@ -1,7 +1,18 @@
-﻿    <p id="TextQuestion">
-    </p>
-    <p>
-        <input class="backbutton" type="text" id="fname"><br>
-        <label id="Resultat"></label><br>
-        <label id="TextReponse"></label><br>
-    </p>
+﻿<p>
+    <canvas id="myCanvas" width="300" height="170" style="color: white;stroke: white;">
+        Your browser does not support the HTML5 canvas tag.
+    </canvas><br>
+    <Label id="Trigonometrie_manque"></Label>
+    <Label> = </Label>
+    <input id="Trigonometrie_long" class="backbutton" type="text" style="width: 50px;">
+    <Label> °</Label>
+</p>
+<p>
+    <label id="correctionGlobal"></label><br>
+    <div id="Correction" style="color:#FF5555">
+        <Label id="CorTrigonometrie_manque"></Label>
+        <Label> = </Label>
+        <Label id="CorTrigonometrie_long"></Label>
+        <Label> °</Label>
+    </div><br>
+</p>
