--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                         </td>
                         <td style="width: 50%;">
                             <a href="" class="button">Exercices</a>
+                            <!--<a href="Autre/Carrée magique.html" class="button">Exercices</a>-->
                         </td>
                     </tr>
                 </table>
