Update Fiche Exercice

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <a href="Annales Brevet/Recherche.html" class="button">Annales de Brevet</a>
                         </td>
                         <td style="width: 50%;">
-                            <a href="" class="button">Exercices</a>
+                            <a href="Fiche exercice/Recherche.html" class="button">Fiches Exercices</a>
                             <!--<a href="Autre/Carrée magique.html" class="button">Exercices</a>-->
                         </td>
                     </tr>
